--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <head>
     <title>Guess the country</title>
     <link rel="stylelesheet" href="./style.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YWTG4SQFWT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YWTG4SQFWT');
+</script>
 </head>
 
 <body>
